@@ -12,11 +12,8 @@ package org.elasticsearch.xpack.inference;
 import org.elasticsearch.client.Request;
 import org.elasticsearch.common.Strings;
 import org.elasticsearch.inference.TaskType;
-import org.elasticsearch.xpack.inference.services.elastic.ElasticInferenceServiceFeature;
 
 import java.io.IOException;
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
@@ -28,12 +25,7 @@ public class InferenceGetServicesIT extends BaseMockEISAuthServerTest {
     @SuppressWarnings("unchecked")
     public void testGetServicesWithoutTaskType() throws IOException {
         List<Object> services = getAllServices();
-        if ((ElasticInferenceServiceFeature.DEPRECATED_ELASTIC_INFERENCE_SERVICE_FEATURE_FLAG.isEnabled()
-            || ElasticInferenceServiceFeature.ELASTIC_INFERENCE_SERVICE_FEATURE_FLAG.isEnabled())) {
-            assertThat(services.size(), equalTo(19));
-        } else {
-            assertThat(services.size(), equalTo(18));
-        }
+        assertThat(services.size(), equalTo(19));
 
         String[] providers = new String[services.size()];
         for (int i = 0; i < services.size(); i++) {
@@ -41,14 +33,15 @@ public class InferenceGetServicesIT extends BaseMockEISAuthServerTest {
             providers[i] = (String) serviceConfig.get("service");
         }
 
-        var providerList = new ArrayList<>(
-            Arrays.asList(
+        assertArrayEquals(
+            List.of(
                 "alibabacloud-ai-search",
                 "amazonbedrock",
                 "anthropic",
                 "azureaistudio",
                 "azureopenai",
                 "cohere",
+                "elastic",
                 "elasticsearch",
                 "googleaistudio",
                 "googlevertexai",
@@ -61,13 +54,9 @@ public class InferenceGetServicesIT extends BaseMockEISAuthServerTest {
                 "test_service",
                 "text_embedding_test_service",
                 "watsonxai"
-            )
+            ).toArray(),
+            providers
         );
-        if ((ElasticInferenceServiceFeature.DEPRECATED_ELASTIC_INFERENCE_SERVICE_FEATURE_FLAG.isEnabled()
-            || ElasticInferenceServiceFeature.ELASTIC_INFERENCE_SERVICE_FEATURE_FLAG.isEnabled())) {
-            providerList.add(6, "elastic");
-        }
-        assertArrayEquals(providerList.toArray(), providers);
     }
 
     @SuppressWarnings("unchecked")
@@ -130,7 +119,7 @@ public class InferenceGetServicesIT extends BaseMockEISAuthServerTest {
             providers[i] = (String) serviceConfig.get("service");
         }
 
-        var providerList = new ArrayList<>(
+        assertArrayEquals(
             List.of(
                 "alibabacloud-ai-search",
                 "amazonbedrock",
@@ -141,21 +130,15 @@ public class InferenceGetServicesIT extends BaseMockEISAuthServerTest {
                 "googleaistudio",
                 "openai",
                 "streaming_completion_test_service"
-            )
+            ).toArray(),
+            providers
         );
-
-        assertArrayEquals(providers, providerList.toArray());
     }
 
     @SuppressWarnings("unchecked")
     public void testGetServicesWithChatCompletionTaskType() throws IOException {
         List<Object> services = getServices(TaskType.CHAT_COMPLETION);
-        if ((ElasticInferenceServiceFeature.DEPRECATED_ELASTIC_INFERENCE_SERVICE_FEATURE_FLAG.isEnabled()
-            || ElasticInferenceServiceFeature.ELASTIC_INFERENCE_SERVICE_FEATURE_FLAG.isEnabled())) {
-            assertThat(services.size(), equalTo(3));
-        } else {
-            assertThat(services.size(), equalTo(2));
-        }
+        assertThat(services.size(), equalTo(3));
 
         String[] providers = new String[services.size()];
         for (int i = 0; i < services.size(); i++) {
@@ -163,26 +146,13 @@ public class InferenceGetServicesIT extends BaseMockEISAuthServerTest {
             providers[i] = (String) serviceConfig.get("service");
         }
 
-        var providerList = new ArrayList<>(List.of("openai", "streaming_completion_test_service"));
-
-        if ((ElasticInferenceServiceFeature.DEPRECATED_ELASTIC_INFERENCE_SERVICE_FEATURE_FLAG.isEnabled()
-            || ElasticInferenceServiceFeature.ELASTIC_INFERENCE_SERVICE_FEATURE_FLAG.isEnabled())) {
-            providerList.addFirst("elastic");
-        }
-
-        assertArrayEquals(providers, providerList.toArray());
+        assertArrayEquals(List.of("elastic", "openai", "streaming_completion_test_service").toArray(), providers);
     }
 
     @SuppressWarnings("unchecked")
     public void testGetServicesWithSparseEmbeddingTaskType() throws IOException {
         List<Object> services = getServices(TaskType.SPARSE_EMBEDDING);
-
-        if ((ElasticInferenceServiceFeature.DEPRECATED_ELASTIC_INFERENCE_SERVICE_FEATURE_FLAG.isEnabled()
-            || ElasticInferenceServiceFeature.ELASTIC_INFERENCE_SERVICE_FEATURE_FLAG.isEnabled())) {
-            assertThat(services.size(), equalTo(5));
-        } else {
-            assertThat(services.size(), equalTo(4));
-        }
+        assertThat(services.size(), equalTo(5));
 
         String[] providers = new String[services.size()];
         for (int i = 0; i < services.size(); i++) {
@@ -190,12 +160,10 @@ public class InferenceGetServicesIT extends BaseMockEISAuthServerTest {
             providers[i] = (String) serviceConfig.get("service");
         }
 
-        var providerList = new ArrayList<>(Arrays.asList("alibabacloud-ai-search", "elasticsearch", "hugging_face", "test_service"));
-        if ((ElasticInferenceServiceFeature.DEPRECATED_ELASTIC_INFERENCE_SERVICE_FEATURE_FLAG.isEnabled()
-            || ElasticInferenceServiceFeature.ELASTIC_INFERENCE_SERVICE_FEATURE_FLAG.isEnabled())) {
-            providerList.add(1, "elastic");
-        }
-        assertArrayEquals(providers, providerList.toArray());
+        assertArrayEquals(
+            List.of("alibabacloud-ai-search", "elastic", "elasticsearch", "hugging_face", "test_service").toArray(),
+            providers
+        );
     }
 
     private List<Object> getAllServices() throws IOException {
